--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Node modules
+node_modules/
+
+# Logs
+logs
+*.log
+
+# Environment files
 .env
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build files (for React)
+build/
+dist/
